k8s/services/shipping-service/shipping-service.-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  namespace: ecommerce-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: shipping-service
        image: selimhorri/shipping-service-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8600
