k8s/services/shipping-service/shipping-service-s.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: ecommerce-microservice
spec:
  type: ClusterIP
  selector:
    app: shipping-service
  ports:
  - port: 8600
    targetPort: 8600
